fixed spy- scroll

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     $('body').scrollspy({ target: '#main-nav' });
 
     // Smooth Scrolling
-    $("#main-nav a").on('click', function (event) {
+    $('#main-nav a').on('click', function (event) {
       if (this.hash !== "") {
         event.preventDefault();
 
